--- a/bower.json
+++ b/bower.json
@@ -3,8 +3,6 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
     "bootstrap": "^3.2.0",
     "angular-animate": "^1.3.0",
     "angular-aria": "^1.3.0",
@@ -18,11 +16,17 @@
     "angular-bootstrap": "~0.12.1"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.0",
-    "angular-scenario": "~1.3.0"
+    "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "resolutions": {
-    "angular": "1.3.15"
+  "moduleName": "expenserApp",
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "less/bootstrap.less",
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
   }
 }
